--- a/client/sass/_button.scss
+++ b/client/sass/_button.scss
@@ -5,9 +5,13 @@
 //These classes are responsible for the hover effect on the mobile menu buttons
 .btn--open {
   background-color: transparent;
-  padding: 15px 10px;
+  padding: 15px 15px;
   border-radius: 0;
   transition: background-color 0.1s linear 0s, border-radius 0.1s linear 0s;
+}
+
+.visibility-hidden {
+  visibility: hidden;
 }
 
 .btn--open:hover {
